# crpg

./: CMakeLists.txt  README.md
assets/: desert.xp  map.xp  test.xp
cmake/: FindSDL2.cmake
doc/: chunk_metrics.txt
shaders/: lighting_shader_fs.glsl  lit_tile_shader_fs.glsl  lit_tile_shader_vs.glsl  material_lighting_shader_fs.glsl  material_lighting_shader_vs.glsl  multi_lighting_shader_fs.glsl  skybox_shader_fs.glsl  skybox_shader_vs.glsl  voxel_shader2_fs.glsl  voxel_shader2_vs.glsl  voxel_shader3_fs.glsl  voxel_shader3_vs.glsl  voxel_shader_fs.glsl  voxel_shader_vs.glsl
src/: main.c
src/game/: combat_state.c  combat_state.h  game.c  game.h  game_state.c  game_state.h  game_state_ids.h  intro_state.c  menu.c  menu.h
src/glad/: glad.c
src/include/: defs.h  glad.h  list.h  store.h  vector.h
src/input/: input.c  input.h  mapped_input.h
src/renderer/: font.c  font.h  opengl_renderer.c  opengl_renderer.h  pixel_buffer.c  pixel_buffer.h  renderer.c  renderer.h  terminal.c  terminal.h  texture_atlas.c  texture_atlas.h
src/rpg/: ability_score.c  ability_score.h  armor.c  armor.h  attack.c  attack.h  combat.c  combat.h  combat_log.c  combat_log.h  combat_map.c  combat_map.h  dice.c  dice.h  entity.c  entity.h  entity_class.c  entity_class.h  faction.c  faction.h  grammar.c  grammar.h  monster.c  monster.h  rpg.c  rpg.h  rpg_defs.h  rpg_log.c  rpg_log.h  weapon.c  weapon.h
src/rpg/templates/: armor_templates.inc  monster_templates.inc  weapon_templates.inc
src/ui/: combat_state.c  fps_ui.c  fps_ui.h  game_state.c  intro_state.h  ui.c  ui.h
src/util/: hashtable.c  list.c  lodepng.c  lodepng.h  math_util.c  math_util.h  rex.c  rex.h  stb_rect_pack.h  store.c  string_util.c  string_util.h  vector.c
src/win32/: mingw.condition_variable.h  mingw.mutex.h
